- fixes minor footer layout issue on mobile viewports - adds gitignore

--- a/css/style.css
+++ b/css/style.css
@@ -265,5 +265,10 @@ code {
 
 .myfooter {
     background: rgba(0, 0, 0, 0.8);
-    padding: 20px 0 0 0;
+    /*padding: 20px 0 0 0;*/
+}
+
+.myfooter.bright-text p {
+    padding: 20px 20px;
+    margin-bottom: 0px;
 }
